--- a/src/main/resources/static/chat.html
+++ b/src/main/resources/static/chat.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         #chat-box {
             height: 300px;
@@ -11,12 +12,18 @@
             background-color: #f9f9f9;
         }
         #message-input {
-            width: calc(100% - 60px);
+            width: calc(100% - 80px); /* Ajustado para mejor diseño */
             padding: 10px;
-            
+            box-sizing: border-box;
         }
         #send-btn {
             padding: 10px;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f1f1f1;
         }
     </style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
