--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,13 +39,17 @@
     <script src="./Tutorial1.js"></script>
     <script src="./Tutorial2.js"></script>
     <script src="./Tutorial3.js"></script>
+    <script src="./Tutorial4.js"></script>
     <script src="./Pausa.js"></script>
     <script src="./Resultados.js"></script>
     <script src="./IniciarSesion.js"></script>
     <script src="./Mapas.js"></script>
+    <script src="./MapaOnline.js"></script>
     <script src="./Local_Online.js"></script>
     <script src="./GameLocal1.js"></script>
     <script src="./GameLocal2.js"></script>
+    <script src="./GameLocal3.js"></script>
+    <script src="./GameOnline1.js"></script>
     <script src="./init.js"></script>
     
 </body>
